Comform Download aws , Upload not done